--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.2",
